@@ -3,6 +3,8 @@
 
 Version 5.1.47
 
+  - Fix for Bug#89948 (27658489), Batched statements are not committed for useLocalTransactionState=true.
+
   - Fix for BUG#80532 (22847443), ENCODING OF RESULTSET.UPDATEROW IS BROKEN FOR NON ASCII CHARCTERS.
 
   - Fix for BUG#22305979, WRONG RECORD UPDATED IF SENDFRACTIONALSECONDS=FALSE AND SMT IS SCROLLABLE.
